--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     
-    <link rel="stylesheet" href=”https://joe-jhon.github.io/work1/index.css”>
+    <link rel="stylesheet" href=”https://joe-jhon.github.io/work1/style.css”>
     <link rel="stylesheet" href="https://use.typekit.net/syv2bvi.css">
     <script>
         /*-Zen Maru Gothic-*/
