--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </header>
 
             <section class="section1">
-                <a href="index.html"><img class="logo" src="commons/images/logo.png" alt="ロゴ"></a>
+                <a href="index.html"><img class="logo" src="https://github.com/joe-jhon/work1/blob/main/logo.png?raw=true" alt="ロゴ"></a>
                 <div class="text">
                     <div class="main">
                         <p><span class="no-color">ハワイ<span>旅行</span></span>に<br><span class="color">出会い</span><span class="adjustment">と</span><span class="color">体験</span><span class="adjustment">を</span></p>
