--- a/index.html
+++ b/index.html
@@ -217,9 +217,9 @@
                 <span>info@arona-hawaii.com</span>
             </p>
             <p class="copywrite">Copyright&nbsp;(C)&nbsp;ARONA&nbsp;CO.,LTD.&nbsp;All&nbsp;rights&nbsp;reserved.</p>
-            <img class="flower1" src="commons/images/Hibiscus-Pink.PNG" alt="ハイビスカスピンク">
-            <img class="flower2" src="commons/images/Hibiscus-Red.PNG" alt="ハイビスカスレッド">
-            <img class="flower3" src="commons/images/Hibiscus-Yellow.PNG" alt="ハイビスカスイエロー">
+            <img class="flower1" src="https://github.com/joe-jhon/work1/blob/main/Hibiscus-Pink.png?raw=true" alt="ハイビスカスピンク">
+            <img class="flower2" src="https://github.com/joe-jhon/work1/blob/main/Hibiscus-Red.png?raw=true" alt="ハイビスカスレッド">
+            <img class="flower3" src="https://github.com/joe-jhon/work1/blob/main/Hibiscus-Yellow.png?raw=true" alt="ハイビスカスイエロー">
         </footer>    
 
 
