--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>index.html</title>
+    <title>work1</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     
-    <link rel="stylesheet" href="https://joe-jhon.github.io/work1/style.css”>
+    <link rel="stylesheet" href="https://joe-jhon.github.io/work1/top.css”>
     <link rel="stylesheet" href="https://use.typekit.net/syv2bvi.css">
     <script>
         /*-Zen Maru Gothic-*/
